<resources>
    <string name="app_name">ChordEditor</string>
    <string name="action_edit">編集</string>
    <string name="action_delete">削除</string>
    <string name="action_save">保存</string>
    <string name="action_help">ヘルプ</string>
    <string name="action_else">その他</string>
    <string name="lylics_edit_e1">記入してください</string>
    <string name="title_image">Chord Editor</string>
    <string name="hint">ヒント</string>
    <string name="action_new">新規作成</string>
    <string name="ai">AI</string>
    <string name="sound">音</string>
    <string name="edit">編集</string>
    <string name="flat">♭</string>
    <string name="sharp">#</string>
    <string name="analysis">コード解析</string>
    <string name="save">SAVE</string>
    <string name="remake">remake all</string>
    <string name="a_change">Aメロの変更</string>
    <string name="b_change">Bメロの変更</string>
    <string name="repetition">リピートデータ</string>
    <string name="Data_Open">データ解析</string>

</resources>
