<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SongPage">


    <item
        android:id="@+id/action_edit"
        android:orderInCategory="1"
        android:title="@string/edit"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_edit" />

    <item
        android:id="@+id/action_new"
        android:orderInCategory="1"
        android:title="@string/analysis"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_edit" />

    <item
        android:id="@+id/action_sound"
        android:orderInCategory="1"
        android:title="@string/sound"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_note" />
</menu>