<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        app:titleTextColor="@android:color/white"
        app:subtitleTextColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary" />
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/good"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="save"
            android:text="@string/save" />
        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/darker_gray"/>
        <Button
            android:id="@+id/bad"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="reload"
            android:text="@string/remake" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />

            <TextView
                android:id="@+id/text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />




            <TextView
                android:id="@+id/text_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />



            <TextView
                android:id="@+id/text_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/A_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="reload_A"
                android:text="@string/a_change" />


            <Button
                android:id="@+id/B_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="reload_B"
                android:text="@string/b_change" />

            <Button
                android:id="@+id/repetition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="repetition"
                android:text="@string/repetition" />

            <Button
                android:id="@+id/Data_Open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Data_Open"
                android:text="@string/Data_Open" />

            <TextView
                android:id="@+id/text_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>